--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,6 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "react/jsx-uses-react": "off",
-        "react/prop-types": "off",
+        "react/prop-types": "off"
     }
 }
